Add github actions and make teleport workflows

--- a/.github/workflows/latest_release.yaml
+++ b/.github/workflows/latest_release.yaml
@@ -1,11 +1,6 @@
 name: Latest Release
 
-on:
-  push:
-    branches:
-    - "main"
-    paths-ignore:
-    - "**/*.png"
+on: workflow_call
 
 jobs:
   latest-release:
