--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,15 +1,5 @@
 name: Docs
-on:
-  push:
-    branches:
-      - "main"
-    paths-ignore:
-      - "**/*.png"
-  pull_request:
-    branches:
-      - "main"
-    paths-ignore:
-      - "**/*.png"
+on: workflow_call
 
 jobs:
   docs-lint:
