--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,10 +1,7 @@
 name: Release
 
-on:
-  push:
-    # Sequence of patterns matched against refs/tags
-    tags:        
-      - "v*.*.*"
+on: workflow_call
+
 jobs:
   release:
     runs-on: ubuntu-latest
