--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -23,6 +23,8 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - name: Setup Docker Buildx
       uses: docker/setup-buildx-action@v2
     - name: Configure AWS credentials
@@ -37,7 +39,7 @@ jobs:
     - name: Setup Docker Buildx
       uses: docker/setup-buildx-action@v2
     - name: Build and push gateway
-      run: make teleport-push
+      run: PLATFORM="linux_amd64" make teleport-push
     - name: Build and push helm
       run: make teleport-helm-push
 
