--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,14 +20,14 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - name: Setup Docker Buildx
       uses: docker/setup-buildx-action@v2
     - name: Build gateway
-      run: make teleport-build
+      run: PLATFORM="linux_amd64" make teleport-build
     - name: Build gateway helm
-      run: |
-        git describe --tags --dirty
-        make teleport-helm-package
+      run: CHART_VERSION=v0.0.0-latest TAG=latest make teleport-helm-package
 
   # verify:
   #   name: Verify
