--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    # needs: [verify, test]
+    needs: [verify, test]
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
@@ -29,30 +29,30 @@ jobs:
     - name: Build gateway helm
       run: CHART_VERSION=v0.0.0-latest TAG=latest make teleport-helm-package
 
-  # verify:
-  #   name: Verify
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Checkout Repo
-  #     uses: actions/checkout@v3
-  #   - name: Setup Go
-  #     uses: actions/setup-go@v4
-  #     with:
-  #       go-version-file: go.mod
-  #       cache: true
-  #   - name: Run Verify
-  #     run: make teleport-verify
+  verify:
+    name: Verify
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Repo
+      uses: actions/checkout@v3
+    - name: Setup Go
+      uses: actions/setup-go@v4
+      with:
+        go-version-file: go.mod
+        cache: true
+    - name: Run Verify
+      run: make teleport-verify
 
-  # test:
-  #   name: Test
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Checkout Repo
-  #     uses: actions/checkout@v3
-  #   - name: Setup Go
-  #     uses: actions/setup-go@v4
-  #     with:
-  #       go-version-file: go.mod
-  #       cache: true
-  #   - name: Unit Tests
-  #     run: make teleport-test
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Repo
+      uses: actions/checkout@v3
+    - name: Setup Go
+      uses: actions/setup-go@v4
+      with:
+        go-version-file: go.mod
+        cache: true
+    - name: Unit Tests
+      run: make teleport-test
