teleport: CI/CD/GHA changes   - Add github actions and make teleport workflows (#1)   - Fix helm versioning (#2)   - Create initial codeql workflow configuration   - Run cd action for teleport branch (#38)   - cd: fix iam role name (#56)   - cd: mark registry as public (#57)   - cd: fix public ecr region (#58)   - cd: fix ecr public region, attempt 2 (#59)   - install btrfs headers on OS (#65)   - ci: fix verify and test (#70)
* Remove fixed reference to 0.6.2 gatewayapi crds
* ignore github workflow yamls

--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -1,20 +1,5 @@
 name: Build and Test
-on:
-  push:
-    branches:
-    - "main"
-    - "release/v*"
-    paths-ignore:
-    - "**/*.png"
-  pull_request:
-    branches:
-    - "main"
-    - "release/v*"
-    paths-ignore:
-    - "**/*.png"
-
-permissions:
-  contents: read
+on: workflow_call
 
 jobs:
   lint:
