--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,23 +2,16 @@ name: "CodeQL"
 
 on:
   push:
-    branches:
-    - "main"
+    branches: [ "teleport" ]
   pull_request:
-    branches:
-    - "main"
-  schedule:
-  - cron: '16 11 * * 5'
-
-permissions:
-  contents: read
-
+    # The branches below must be a subset of the branches above
+    branches: [ "teleport" ]
 
 jobs:
   analyze:
     name: Analyze
-    runs-on: 'ubuntu-22.04'
-    timeout-minutes: 360
+    runs-on: 'ubuntu-latest'
+    timeout-minutes: 240
     permissions:
       actions: read
       contents: read
@@ -27,23 +20,22 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language:
-        - go
+        language: [ 'go', 'python' ]
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
-    - uses: ./tools/github-actions/setup-deps
+      uses: actions/checkout@v3
 
+    # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
-      uses: github/codeql-action/init@662472033e021d55d94146f66f6058822b0b39fd  # v3.27.0
+      uses: github/codeql-action/init@v2
       with:
         languages: ${{ matrix.language }}
 
     - name: Autobuild
-      uses: github/codeql-action/autobuild@662472033e021d55d94146f66f6058822b0b39fd  # v3.27.0
+      uses: github/codeql-action/autobuild@v2
 
     - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@662472033e021d55d94146f66f6058822b0b39fd  # v3.27.0
+      uses: github/codeql-action/analyze@v2
       with:
         category: "/language:${{matrix.language}}"
