--- a/internal/gatewayapi/testdata/tlsroute-multiple.out.yaml
+++ b/internal/gatewayapi/testdata/tlsroute-multiple.out.yaml
@@ -21,7 +21,7 @@ gateways:
       supportedKinds:
       - group: gateway.networking.k8s.io
         kind: TLSRoute
-      attachedRoutes: 2 
+      attachedRoutes: 2
       conditions:
       - type: Programmed
         status: "True"
@@ -37,6 +37,8 @@ tlsRoutes:
   metadata:
     namespace: default
     name: tlsroute-1
+    annotations:
+      "cloud.teleport.dev/protos": "customproto"
   spec:
     parentRefs:
     - namespace: envoy-gateway
@@ -102,6 +104,8 @@ xdsIR:
       tls:
         snis:
         - foo.com
+        protos:
+        - "customproto"
       destinations:
       - host: 7.7.7.7
         port: 8080
@@ -116,7 +120,7 @@ xdsIR:
       destinations:
       - host: 7.7.7.7
         port: 8080
-        weight: 1       
+        weight: 1
 infraIR:
   envoy-gateway-gateway-1:
     proxy:
