--- a/internal/gatewayapi/testdata/tlsroute-multiple.in.yaml
+++ b/internal/gatewayapi/testdata/tlsroute-multiple.in.yaml
@@ -22,7 +22,7 @@ tlsRoutes:
     namespace: default
     name: tlsroute-1
     annotations:
-      "cloud.teleport.dev/protos": "customproto"
+      "cloud.teleport.dev/protos": "proto1,proto2"
   spec:
     parentRefs:
     - namespace: envoy-gateway
