Differentiate between tcp listener and tcp route names
Previously the name of the first tcp or tls route to be processed was
used as the listener name. This lead to envoy draining when the tcp
listener name changed which was caused routes being added/removed or
routes being processed in a different order.

--- a/internal/gatewayapi/testdata/gateway-with-two-listeners-with-same-port-http-tcp-protocol.out.yaml
+++ b/internal/gatewayapi/testdata/gateway-with-two-listeners-with-same-port-http-tcp-protocol.out.yaml
@@ -130,7 +130,8 @@ xdsIR:
           port: 8080
           weight: 1
     tcp:
-    - name: "envoy-gateway-gateway-1-tcp-tcproute-1"
+    - listenerName: envoy-gateway-gateway-1-tcp
+      routeName: envoy-gateway-gateway-1-tcp-tcproute-1
       address: "0.0.0.0"
       port: 10080
       destinations:
