--- a/internal/gatewayapi/testdata/gateway-with-listener-with-tls-terminate-and-passthrough.out.yaml
+++ b/internal/gatewayapi/testdata/gateway-with-listener-with-tls-terminate-and-passthrough.out.yaml
@@ -141,7 +141,8 @@ xdsIR:
                 port: 8080
                 weight: 1
     tcp:
-      - name: envoy-gateway-gateway-1-tls-passthrough-tlsroute-1
+      - listenerName: envoy-gateway-gateway-1-tls-passthrough
+        routeName: envoy-gateway-gateway-1-tls-passthrough-tlsroute-1
         address: 0.0.0.0
         port: 10090
         tls:
