--- a/internal/gatewayapi/testdata/gateway-with-single-listener-with-multiple-tcproutes.out.yaml
+++ b/internal/gatewayapi/testdata/gateway-with-single-listener-with-multiple-tcproutes.out.yaml
@@ -89,7 +89,8 @@ tcpRoutes:
 xdsIR:
   envoy-gateway-gateway-1:
     tcp:
-      - name: "envoy-gateway-gateway-1-tcp-tcproute-1"
+      - listenerName: envoy-gateway-gateway-1-tcp
+        routeName: envoy-gateway-gateway-1-tcp-tcproute-1
         address: "0.0.0.0"
         port: 10162
         destinations:
