--- a/internal/gatewayapi/testdata/gateway-with-two-listeners-on-same-tcp-port.out.yaml
+++ b/internal/gatewayapi/testdata/gateway-with-two-listeners-on-same-tcp-port.out.yaml
@@ -81,7 +81,8 @@ tcpRoutes:
 xdsIR:
   envoy-gateway-gateway-1:
     tcp:
-      - name: "envoy-gateway-gateway-1-tcp1-tcproute-1"
+      - listenerName: envoy-gateway-gateway-1-tcp1
+        routeName: envoy-gateway-gateway-1-tcp1-tcproute-1
         address: "0.0.0.0"
         port: 10162
         destinations:
