--- a/internal/gatewayapi/testdata/tlsroute-attaching-to-gateway.out.yaml
+++ b/internal/gatewayapi/testdata/tlsroute-attaching-to-gateway.out.yaml
@@ -64,7 +64,8 @@ tlsRoutes:
 xdsIR:
   envoy-gateway-gateway-1:
     tcp:
-      - name: envoy-gateway-gateway-1-tls-tlsroute-1
+      - listenerName: envoy-gateway-gateway-1-tls
+        routeName: envoy-gateway-gateway-1-tls-tlsroute-1
         address: 0.0.0.0
         port: 10090
         tls:
