--- a/internal/gatewayapi/testdata/tlsroute-multiple.out.yaml
+++ b/internal/gatewayapi/testdata/tlsroute-multiple.out.yaml
@@ -95,7 +95,8 @@ tlsRoutes:
 xdsIR:
   envoy-gateway-gateway-1:
     tcp:
-    - name: envoy-gateway-gateway-1-tls-tlsroute-1
+    - listenerName: envoy-gateway-gateway-1-tls
+      routeName: envoy-gateway-gateway-1-tls-tlsroute-1
       address: 0.0.0.0
       port: 10091
       tls:
@@ -105,7 +106,8 @@ xdsIR:
       - host: 7.7.7.7
         port: 8080
         weight: 1
-    - name: envoy-gateway-gateway-1-tls-tlsroute-2
+    - listenerName: envoy-gateway-gateway-1-tls
+      routeName: envoy-gateway-gateway-1-tls-tlsroute-2
       address: 0.0.0.0
       port: 10091
       tls:
