--- a/internal/gatewayapi/testdata/tlsroute-with-empty-listener-hostname.out.yaml
+++ b/internal/gatewayapi/testdata/tlsroute-with-empty-listener-hostname.out.yaml
@@ -65,7 +65,8 @@ tlsRoutes:
 xdsIR:
   envoy-gateway-gateway-1:
     tcp:
-    - name: envoy-gateway-gateway-1-tls-tlsroute-1
+    - listenerName: envoy-gateway-gateway-1-tls
+      routeName: envoy-gateway-gateway-1-tls-tlsroute-1
       address: 0.0.0.0
       port: 10091
       tls:
