--- a/internal/xds/translator/testdata/in/xds-ir/multiple-listeners-same-port.yaml
+++ b/internal/xds/translator/testdata/in/xds-ir/multiple-listeners-same-port.yaml
@@ -52,7 +52,8 @@ http:
     - host: "1.2.3.4"
       port: 50000
 tcp:
-- name: "fifth-listener"
+- listenerName: "fifth-listener"
+  routeName: "fifth-listener"
   address: "0.0.0.0"
   port: 10080
   tls:
@@ -61,7 +62,8 @@ tcp:
   destinations:
   - host: "1.2.3.4"
     port: 50000
-- name: "sixth-listener"
+- listenerName: "fifth-listener"
+  routeName: "sixth-listener"
   address: "0.0.0.0"
   port: 10080
   tls:
