--- a/charts/gateway-helm/templates/webhooks/job-patch/serviceaccount.yaml
+++ b/charts/gateway-helm/templates/webhooks/job-patch/serviceaccount.yaml
@@ -1,13 +1,11 @@
 ---
-#
-# config/webhook/certificate_config.yaml
-#
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "eg.fullname" . }}-admission
   labels:
     name: {{ include "eg.fullname" . }}-webhook
+  {{- include "eg.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
