--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -18,7 +18,7 @@ jobs:
       checks: read
       id-token: write
     env:
-      AWS_REGION: us-west-2
+      AWS_REGION: us-east-1
       ECR_AWS_ROLE: arn:aws:iam::146628656107:role/envoy-gateway-github-action-ecr-role
     runs-on: ubuntu-latest
     needs: [verify, test]
