--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [verify, test]
     steps:
+    - name: Install btrfs headers
+      run: sudo apt-get install libbtrfs-dev -y
     - name: Checkout Repo
       uses: actions/checkout@v3
       with:
