--- a/internal/xds/translator/testdata/in/xds-ir/tls-route-passthrough.yaml
+++ b/internal/xds/translator/testdata/in/xds-ir/tls-route-passthrough.yaml
@@ -8,6 +8,8 @@ tcp:
       inspector:
         snis:
         - foo.com
+        protos:
+        - customproto
     destination:
       name: "tls-passthrough-foo-dest"
       settings:
