--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -23,6 +23,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [verify, test]
     steps:
+    - name: Install btrfs headers
+      run: sudo apt-get install libbtrfs-dev -y
     - name: Checkout Repo
       uses: actions/checkout@v3
       with:
@@ -50,6 +52,8 @@ jobs:
     name: Verify
     runs-on: ubuntu-latest
     steps:
+    - name: Install btrfs headers
+      run: sudo apt-get install libbtrfs-dev -y
     - name: Checkout Repo
       uses: actions/checkout@v3
     - name: Setup Go
@@ -64,6 +68,8 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
+    - name: Install btrfs headers
+      run: sudo apt-get install libbtrfs-dev -y
     - name: Checkout Repo
       uses: actions/checkout@v3
     - name: Setup Go
